    - Use pkg-info.mk instead parsing the output of dpkg-parsechangelog.
  * Declare compliance with Debian Policy 4.1.3 (No changes needed).
  * Bump compat to 11:
    - Change debian/compat to 11.
    - Change debhelper version at debian/control to >= 11.
  * Change to my new email address:
    - debian/control
    - debian/copyright
  * debian/copyright:
    - Add year 2018 to debian/*.
    - Update to the new upstream release.
  * debian/watch:
    - Bump version to 4.
    - Allow only numerical versions.
  * debian/changelog:
    - Remove trailing whitespaces.
  * New patches/0700-appstream-metadata.patch:
    - Rewrite package metadata to the latest version.

 -- Antoine Beaupré <anarcat@debian.org>  Sat, 30 Dec 2017 12:20:05 -0500

rapid-photo-downloader (0.4.11-1) unstable; urgency=medium

  * New upstream release (Closes: #806975, #806976).
  * Remove debian/menu by reason of tech-ctte bug #741573.
  * Rewrite debian/watch to track the last version.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Sun, 06 Dec 2015 02:58:59 +0100

rapid-photo-downloader (0.4.10-3) unstable; urgency=medium

  * debian/control:
    - Bump Standards-Version to 3.9.6 (no changes required).
    - Add dh-python to Build-Depends to prevent warning at build.
    - Remove X-Python-Version 2.6 during installation errors.
  * New debian/lintian-overrides:
    - Override the warning "desktop-mime-but-no-exec-code" because
      the program don't use parameters for filenames.
  * debian/copyright:
    - Add year 2015.
  * Remove debian/source/options because compression xz is standard now.
  * Refresh patches.

 -- Jörg Frings-Fürst <debian@jff-webhosting.net>  Mon, 11 May 2015 23:43:30 +0200

rapid-photo-downloader (0.4.10-2) unstable; urgency=medium

  * New maintainer (Closes: #753568).
  * debian/control:
    - Set myself as maintainer.
    - Vcs:
      + Remove upstream Vcs.
      + Create a new git repository on alioth.
      + Add the Fields Vcs-Browser and Vcs-Git.