@@ -35,6 +35,7 @@ License: GPL-2+
 Files: debian/*
 Copyright: 2009      Damon Lynch <damonlynch@gmail.com>
            2009-2014 Julien Valroff <julien@debian.org>
+           2017      Antoine Beaupré <anarcat@debian.org>
            2014-2018 Jörg Frings-Fürst <debian@jff.email>
 License: GPL-2+
 
